<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/start_screen_title"
        android:textAppearance="@style/TextApp.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openQrGenerationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_screen_open_qr_code_gen"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideline"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/openPostsListBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_screen_open_posts_list"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideline"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/openQrGenerationBtn" />

    <Button
        android:id="@+id/openGaugeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_screen_open_speedometer"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideline"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/openPostsListBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>