<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="@string/post_detailed_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="postIdLabel,postTitleLabel,postBodyLabel" />

    <TextView
        android:id="@+id/postIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextApp.Body.Label"
        android:text="@string/post_detailed_id_label"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/postIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextApp.Body"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/postIdLabel"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        tools:text="473874834" />

    <TextView
        android:id="@+id/postTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextApp.Body.Label"
        android:text="@string/post_detailed_title_label"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/postIdLabel" />

    <TextView
        android:id="@+id/postTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextApp.Body"
        android:layout_marginStart="16dp"
        android:singleLine="false"
        app:layout_constraintBaseline_toBaselineOf="@id/postTitleLabel"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideline"
        tools:text="sunt aut facere repellat provident occaecati excepturi optio reprehenderit" />

    <TextView
        android:id="@+id/postBodyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_detailed_body_label"
        android:textAppearance="@style/TextApp.Body.Label"
        app:layout_constraintStart_toStartOf="@id/verticalStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/postTitleTextView" />

    <TextView
        android:id="@+id/postBodyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextApp.Body"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/postBodyLabel"
        app:layout_constraintStart_toEndOf="@id/labelsBarrier"
        app:layout_constraintEnd_toEndOf="@id/verticalEndGuideline"
        tools:text="quia et suscipit suscipit recusandae consequuntur expedita et cum reprehenderit molestiae ut ut quas totam
        nostrum rerum est autem sunt rem eveniet architecto" />
</androidx.constraintlayout.widget.ConstraintLayout>